--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
   </head>
   <body>
     <script src="js/scripts.js"></script>
+
+    <script>
+
+let pokemon= { name: 'Bulbasaur', height: 2.04};
+
+if (pokemon.height > 2.5) {
+  console.log('WOW! this Pokemon is tall')
+}else if (pokemon.Height> 1 && pokemon.height < 2.1){
+  console.log('This is an average Pokemon');
+}else {
+      console.log('This Pokemon is tiny!');
+    }
+
+    </script>
  </body>
 </html>
