--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <script>
 
- let pokemon= { name: 'Bulbasaur', height: 2.04};
+ let pokemon= { name: 'Charizard', height: 5.07};
 
  if (pokemon.height > 2.5) {
-   console.log('WOW! this Pokemon is tall')
- }else if (pokemon.height> 1 && pokemon.height < 2.1){
+   console.log('WOW! this Pokemon is big')
+ }else if (pokemon.height> 1.5 && pokemon.height < 2.1){
    console.log('This is an average Pokemon');
  }else {
    console.log ('This is a tiny Pokemon!');
  }
-    
+
     </script>
  </body>
 </html>
