changes for task 1.3
 adding loops and documen.write
names and heights

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script>
 
+//conditional WOW for the biggest Pokemon
  let pokemon= { name: 'Charizard', height: 5.07};
 
  if (pokemon.height > 2.5) {
@@ -19,7 +20,10 @@
  }else {
    console.log ('This is a tiny Pokemon!');
  }
-
+ //adding the names and heights
+  document.write('<br>' + 'Bulbasaur' + 'height: 2.04')
+  document.write('<br>' + 'Charizard' +  'height: 5.07')
+  document.write('<br>' + 'pikachu' +  'height: 1.04')
     </script>
  </body>
 </html>
