--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <script>
 
 //conditional WOW for the biggest Pokemon
- let pokemon= { name: 'Charizard', height: 5.07};
+let pokemon= { name: 'Charizard', height: 5.07};
 
- if (pokemon.height > 2.5) {
-   console.log('WOW! this Pokemon is big')
- }else if (pokemon.height> 1.5 && pokemon.height < 2.1){
-   console.log('This is an average Pokemon');
- }else {
-   console.log ('This is a tiny Pokemon!');
+if (pokemon.height > 5) {
+  console.log('WOW! this Pokemon is big')
+}else if (pokemon.height> 2 && pokemon.height < 3){
+  console.log('This is an average Pokemon');
+}else {
+  console.log ('This is a tiny Pokemon!');}
  }
  //adding the names and heights
   document.write('<br>' + 'Bulbasaur' + 'height: 2.04')
