--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ if (pokemon.height > 5) {
 }else if (pokemon.height> 2 && pokemon.height < 3){
   console.log('This is an average Pokemon');
 }else {
-  console.log ('This is a tiny Pokemon!');}
+  console.log ('This is a tiny Pokemon!');
  }
  //adding the names and heights
   document.write('<br>' + 'Bulbasaur' + 'height: 2.04')
