--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-  </head>
+    <link href="style.css" rel="stylesheet" type="text/css"/> 
   <body>
     <h1>Pokedex</h1>
     <ul class='pokemon-list'></ul>
