--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
   <body>
     <h1>Pokedex</h1>
+<div class='modal-container'>
+<div class='modal'> <!--exercise 1.8-->
+  <button class='modal-close'>close</button>
+  <h1 class="modal__title"></h1>
+  <img class="modal__img" src="img/" alt="pokemon_logo">
+  <p class="modal__text"></p>
+  <div class="container">
+
     <ul class='pokemon-list'></ul>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
