--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple JS App</title>
-    <link href="styles.css" rel="stylesheet" type="text/css"/>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simple JS App</title>
+  <link href="styles.css" rel="stylesheet" type="text/css"/>
   <body>
+    <header class = "header">
+    <div class="header__item"><img id="pokemon__logo" src="img/pokemon_logo.png" alt="pokemon logo"></div>
+  </header>
     <!--exercise 1.8-->
-    <div class='modal-container'>
-    <h1>Pokedex</h1>
-    <ul class="pokemonList"></ul>
+    <div class="container">
+      <h1>Pokedex</h1>
+      <ul class="pokemon-list"></ul>
 
-  <div class='modal'>
-  <button class='modal-close'>close</button>
-  <h1 class="modal__title"></h1>
-  <img class="modal__img" src="img/" alt="pokemon_logo">
-  <p class="modal__text"></p>
-  <div class="container">
+      <div class='modal-container'>
+      <div class='modal'>
+        <button class='modal-close'>close</button>
+        <h1 class="modal__title"></h1>
+        <img class="modal__img" src="img/" alt="pokemon_logo">
+        <p class="modal__text"></p>
+      </div>
+    </div>
+  </div>
 
 
-    <script src="js/promise-polyfill.js"></script>
-    <script src="js/fetch-polyfill.js"></script>
-    <script src="js/scripts.js"></script>
- </body>
-</html>
+          <script src="js/promise-polyfill.js"></script>
+          <script src="js/fetch-polyfill.js"></script>
+          <script src="js/scripts.js"></script>
+        </body>
+        </html>
