moving bs to the right lines

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link href="styles.css" rel="stylesheet" type="text/css"/>
   <body>
     <header class = "header">
-    <div class="header__item"><img id="pokemon__logo" src="img/pokemon_logo.png" alt="pokemon logo"></div>
+  
+      <div class="header__item"><img id="pokemon__logo" src="img/pokemon_logo.png" alt="pokemon logo"></div>
+      <div class="form-inline"></div>
   </header>
     <!--exercise 1.8-->
     <div class="container">
