--- a/index.html
+++ b/index.html
@@ -7,18 +7,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Simple JS App</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="styles.css" rel="stylesheet" type="text/css"/>
-  <body>
+  <link href="C:/Users/valer/Desktop/Javascript-files-Repo/css/styles.css" rel="stylesheet" type="text/css"/> 
+  <body> 
     <header class = "header">
-  
       <div class="header__item"><img id="pokemon__logo" src="img/pokemon_logo.png" alt="pokemon logo"></div>
       <div class="form-inline"></div>
+      <div class="container">
+        <h1>Pokedex</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#">Hidden brand</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
   </header>
-    <!--exercise 1.8-->
-    <div class="container">
-      <h1>Pokedex</h1>
-      <ul class="pokemon-list"></ul>
-
+	<main class="container">
+    <div class="row">
+    <div class="pokemon-list list-group">
+    </div>
+</div>
+</main>
       <div class='modal-container'>
       <div class='modal'>
         <button class='modal-close'>close</button>
