--- a/index.html
+++ b/index.html
@@ -49,19 +49,45 @@
   <p>The Pokemon Dictionary </p>
 
 	<main>
-      <div class='modal-container'>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="pokemon" tabindex="-1" role="dialog" aria-labelledby="PokemonModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="PokemonModalLabel">/h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- old Modal code -->
+      <!-- <div class='modal-container'>
       <div class='modal'>
         <button class='modal-close'>close</button>
         <h1 class="modal__title"></h1>
         <img class="modal__img" src="img/" alt="pokemon_logo">
         <p class="modal__text"></p>
       </div>
-    </div>
+    </div> -->
     <div class="container">
       <div class="row">
         <div class="col">
           <ul
-            class="pokemon-list group-list"
+            class="pokemon-list group-list list-unstyled flex-row flex-wrap w-100 just-content: center"
             data-toggle="modal"
             data-target="#pokemonModal"
           ></ul>
