--- a/index.html
+++ b/index.html
@@ -48,51 +48,51 @@
   <h1>Pokedex</h1>
   <p>The Pokemon Dictionary </p>
 
-	<main>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="pokemon" tabindex="-1" role="dialog" aria-labelledby="PokemonModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="PokemonModalLabel">/h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div> 
-  </div>
-</div>
-
-<!-- old Modal code -->
-      <!-- <div class='modal-container'>
-      <div class='modal'>
-        <button class='modal-close'>close</button>
-        <h1 class="modal__title"></h1>
-        <img class="modal__img" src="img/" alt="pokemon_logo">
-        <p class="modal__text"></p>
-      </div>
-    </div> -->
-    <div class="container">
-      <div class="row">
-        <div class="col">
+	<main class="pokemon-overview">
+    <header class="container-fluid">
+      <div class="row" id="pokemon-list"></div>
+    </header>
+    
           <ul
-            class="pokemon-list group-list list-unstyled flex-row flex-wrap w-100 just-content: center"
+            class="pokemon-list group-list"
             data-toggle="modal"
             data-target="#pokemonModal"
           ></ul>
-  </div>
-  </div>
+          <!-- Modal -->
+          <div 
+            class="modal-fade"
+            id="pokemon"
+            tabindex="-1" 
+            role="dialog" 
+            aria-labelledby="PokemonModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="PokemonModalLabel">/h5>
+                  <button 
+                  type="button" 
+                  class="close" 
+                  data-dismiss="modal" 
+                  aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button 
+                  type="button" 
+                  class="btn btn-secondary" 
+                  data-dismiss="modal" >Close</button>
+                </div>
+              </div> 
+            </div>
+          </div>
+        </div>
+      </div>
+   </div>
 </main>
 
   <script
@@ -100,7 +100,7 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
           <script src="js/promise-polyfill.js"></script>
           <script src="js/fetch-polyfill.js"></script>
           <script src="js/scripts.js"></script>
