--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
   <body> 
     <div class="header__item">
-      <img id="pokemon_logo" src="img/pokemon_logo.png" alt="pokemon logo">
+      <img id="pokemon_logo img-fluid" src="img/pokemon_logo.png" alt="pokemon logo">
     </div>
 
     <header class = "header">
@@ -58,7 +58,9 @@
             data-toggle="modal"
             data-target="#pokemonModal"
           ></ul>
+          
           <!-- Modal -->
+
           <div 
             class="modal-fade"
             id="pokemon"
