--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
  </div>
       <div class="form-inline"></div>
-      <div class="container">
+      <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,9 @@
   <p>The Pokemon Dictionary </p>
 
 	<main class="pokemon-overview">
-    <ul class="pokemon-list group-list"></ul>
+   <div class="row">
+    <div class="col">
+    <ul class="pokemon-list group-list list-unstyled flex-row flex-wrap w-100 just-content: center"></ul>
     <div class="modal fade" id="modal-container" tabindex="-1" role="dialog" aria-labelledby="modal-container" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -67,6 +69,8 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
 
   </main>
 
