--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
   <img id = 'pikachu_icon' src = 'img/pikachu_icon.png' alt="pikachu_icon">
 </div>
  </div>
-      <div class="form-inline"></div>
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar fixed navbar-expand-lg navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,13 +33,13 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="https://scrapbandit.github.io/Valeria-s-skeleton-web/">Developer</a>
               </li>
               
             </ul>
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pokemon GO!</button>
+              <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Pokemon GO!</button>
             </form>
           </div>
         </nav>
@@ -48,9 +47,9 @@
   <h1>Pokedex</h1>
   <p>The Pokemon Dictionary </p>
 
-	<main class="pokemon-overview">
+	<main class=" container pokemon-overview">
    <div class="row">
-    <div class="col">
+    
     <ul class="pokemon-list group-list list-unstyled flex-row flex-wrap w-100 just-content: center"></ul>
     <div class="modal fade" id="modal-container" tabindex="-1" role="dialog" aria-labelledby="modal-container" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -71,10 +70,8 @@
     </div>
   </div>
 </div>
-
   </main>
-
-  <script
+   <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -83,6 +80,5 @@
           <script src="js/promise-polyfill.js"></script>
           <script src="js/fetch-polyfill.js"></script>
           <script src="js/scripts.js"></script>
-  
         </body>
         </html>
