--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
   <body> 
-    <div class="header__item">
-      <img id="pokemon_logo img-fluid" src="img/pokemon_logo.png" alt="pokemon logo">
-    </div>
+   
 
-    <header class = "header">
-<div class = "header_img">
-  <img id = 'pikachu_icon' src = 'img/pikachu_icon.png' alt="pikachu_icon">
-</div>
- </div>
-      <div class="container-fluid">
+    <header>
+      <img id = 'pikachu_icon' src = 'img/pikachu_icon.png' alt="pikachu_icon">
         <nav class="navbar fixed navbar-expand-lg navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,19 +25,18 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
+               </li>
+                <li class="nav-item">
                 <a class="nav-link" href="https://scrapbandit.github.io/Valeria-s-skeleton-web/">Developer</a>
-              </li>
-              
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
+               </li>
+               </ul>
+              <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Pokemon GO!</button>
             </form>
           </div>
         </nav>
-  </header>
+   </header>
   <h1>Pokedex</h1>
   <p>The Pokemon Dictionary </p>
 
