--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="navbar-brand" href='https://pokeapi.co/'>pokeAPI</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="https://scrapbandit.github.io/Javascript-files-Repo/">Home <span class="sr-only">(current)</span></a>
                </li>
                 <li class="nav-item">
                 <a class="nav-link" href="https://scrapbandit.github.io/Valeria-s-skeleton-web/">Developer</a>
